--- a/css/stylecart.css
+++ b/css/stylecart.css
@@ -249,464 +249,457 @@ body {
   }
 }
 
-.brand {
-  display: flex;
-  margin: 0 0 63px;
-  background-color: #F1E4E6;
-  justify-content: center;
+.shopping {
+  text-transform: uppercase;
+  min-height: 148px;
+  background-color: #F8F3F4;
 }
 
-.brand__image {
-  width: 50%;
-  height: auto;
+.shopping__title {
+  color: #F16D7F;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 29px;
+  text-align: left;
+  padding: 59px 0px 0px;
 }
 
-@media (max-width: 767px) {
-  .brand__image {
-    display: none;
+@media (max-width: 1599px) {
+  .shopping__title {
+    text-align: center;
+    padding: 50px 0 0;
   }
 }
 
-.brand__title {
-  font-size: 48px;
-  line-height: 58px;
-  font-weight: 900;
-  font-style: normal;
-  width: 377px;
-  min-height: 93px;
-  text-transform: uppercase;
+.data {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 1599px) {
+  .data {
+    display: block;
+  }
+}
+
+@media (max-width: 767px) {
+  .data {
+    width: 343px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.data_cart {
+  margin: 96px 129px 128px 0px;
+}
+
+@media (max-width: 1599px) {
+  .data_cart {
+    margin: 59px 0 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .data_cart {
+    margin: 39px 0 0;
+  }
+}
+
+.data .cart-img {
+  width: 652px;
+}
+
+@media (max-width: 1599px) {
+  .data .cart-img {
+    width: 757px;
+  }
+}
+
+@media (max-width: 767px) {
+  .data .cart-img {
+    width: 100%;
+  }
+}
+
+.data .cart-1 {
+  min-height: 306px;
+  width: 652px;
   position: relative;
 }
 
 @media (max-width: 1599px) {
-  .brand__title {
-    font-size: 44px;
-    line-height: 53px;
-    font-weight: 900;
-    font-style: normal;
-    width: 283px;
+  .data .cart-1 {
+    width: 734px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 @media (max-width: 767px) {
-  .brand__title {
-    font-size: 38px;
-    line-height: 46px;
-    font-weight: 900;
-    font-style: normal;
-    width: 236px;
+  .data .cart-1 {
+    width: 343px;
+    min-height: 188px;
   }
 }
 
-.brand__title-wrapper {
-  padding: 0 0 0 92px;
-  display: flex;
-  align-items: center;
-}
-
-@media (max-width: 1599px) {
-  .brand__title-wrapper {
-    padding: 0 0 0 67px;
-  }
-}
-
-@media (max-width: 767px) {
-  .brand__title-wrapper {
-    padding: 0 0 0 83px;
-    min-height: 363px;
-  }
-}
-
-.brand__title::before {
-  content: '';
-  height: 92px;
-  width: 12px;
-  background: #F16D7F;
+.data .cart-cross-1 {
   position: absolute;
-  left: -30px;
-  top: 7px;
+  top: 0px;
+  right: 0px;
+  color: #575757;
+  background-color: transparent;
+  height: 16px;
+  width: 16px;
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  margin: 28px 64px 0px 0px;
 }
 
 @media (max-width: 1599px) {
-  .brand__title::before {
-    top: 0px;
+  .data .cart-cross-1 {
+    margin: 21px 44px 0px 0px;
   }
 }
 
 @media (max-width: 767px) {
-  .brand__title::before {
-    min-height: 61px;
+  .data .cart-cross-1 {
+    margin: 21px 48px 0px 0px;
   }
 }
 
-.brand__subtitle {
-  display: block;
-  font-size: 32px;
-  line-height: 38px;
-  font-weight: 700;
-  font-style: normal;
+.data .cart-2 {
+  min-height: 306px;
+  width: 652px;
+  position: relative;
 }
 
 @media (max-width: 1599px) {
-  .brand__subtitle {
-    font-size: 24px;
-    line-height: 29px;
-    font-weight: 700;
-    font-style: normal;
+  .data .cart-2 {
+    width: 734px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 @media (max-width: 767px) {
-  .brand__subtitle {
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 700;
-    font-style: normal;
+  .data .cart-2 {
+    width: 343px;
+    min-height: 188px;
   }
 }
 
-.brand__subtitle-pink {
-  color: #F16D7F;
+.data .cart-cross-2 {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  color: #575757;
+  background-color: transparent;
+  height: 18px;
+  width: 18px;
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  margin: 28px 64px 0px 0px;
 }
 
-.offers__list {
+@media (max-width: 1599px) {
+  .data .cart-cross-2 {
+    margin: 21px 44px 0px 0px;
+  }
+}
+
+@media (max-width: 767px) {
+  .data .cart-cross-2 {
+    margin: 21px 48px 0px 0px;
+  }
+}
+
+.data .button {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.offers__item {
-  color: white;
-  width: 31%;
-  min-height: 260px;
-  background-color: #474040;
-  background-size: cover;
-  margin: 0 0 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-top: 72px;
 }
 
 @media (max-width: 1599px) {
-  .offers__item {
-    min-height: 167px;
-    margin: 0 0 20px;
-  }
-}
-
-@media (max-width: 767px) {
-  .offers__item {
-    width: 100%;
-    min-height: 248px;
-  }
-}
-
-.offers__item:hover, .offers__item:focus {
-  opacity: 0.7;
-}
-
-.offers__item:active {
-  color: red;
-}
-
-.offers__item-woman {
-  background-image: url(../img/forwoman.jpg);
-}
-
-.offers__item-man {
-  background-image: url(../img/forman.jpg);
-}
-
-.offers__item-kids {
-  background-image: url(../img/forkids.jpg);
-}
-
-.offers__item-accesories {
-  background-image: url(../img/accesories.jpg);
-  width: 100%;
-  margin: 0;
-}
-
-@media (max-width: 1599px) {
-  .offers__item-accesories {
-    min-height: 116px;
-  }
-}
-
-@media (max-width: 767px) {
-  .offers__item-accesories {
-    min-height: 111px;
-  }
-}
-
-.offers__item-title {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 19px;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: normal;
-  color: #FFFFFF;
-}
-
-.offers__item-subtitle {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 22px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #F16D7F;
-  letter-spacing: 1px;
-}
-
-.products__title {
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 36px;
-  color: #222222;
-  text-align: center;
-  margin: 96px 0 6px;
-}
-
-.products__subtitle {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 17px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #9F9F9F;
-  margin: 6px 0 48px;
-}
-
-@media (max-width: 1599px) {
-  .products__subtitle {
-    margin: 3px 0 73px;
-  }
-}
-
-@media (max-width: 767px) {
-  .products__subtitle {
-    margin: 3px 0 65px;
-  }
-}
-
-.products__card-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-@media (max-width: 767px) {
-  .products__card-wrapper {
+  .data .button {
+    margin-top: 62px;
     justify-content: center;
   }
 }
 
-.products__card {
-  height: 581px;
-  width: 360px;
-  margin: 0 0 30px;
-  background-color: #F8F8F8;
-}
-
-@media (max-width: 1599px) {
-  .products__card {
-    margin: 0 0 16px;
+@media (max-width: 767px) {
+  .data .button {
+    margin-top: 30px;
   }
 }
 
-.products__card-title {
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 16px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #000000;
+.data .button_clear {
+  height: 50px;
+  width: 235px;
+  background-color: #FFFFFF;
   text-transform: uppercase;
-  margin: 18px 25px;
-  background-color: #F8F8F8;
-}
-
-.products__card-subtitle {
+  color: black;
+  font-family: Lato;
   font-size: 14px;
   font-weight: 300;
   line-height: 17px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #5D5D5D;
-  margin: 16px 13px;
+  border: 1px solid #A4A4A4;
+  margin: 0 193px 0px 0px;
 }
 
-.products__card-price {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 19px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #F16D7F;
-  margin: 18px 18px;
+@media (max-width: 1599px) {
+  .data .button_clear {
+    height: 49px;
+    width: 234px;
+    margin: 0 48px 0 0;
+  }
 }
 
-.products .cart-wrapper-overlay {
-  position: relative;
-  height: 420px;
+@media (max-width: 767px) {
+  .data .button_clear {
+    height: 32px;
+    width: 174px;
+    margin: 0 9px 0 0;
+  }
 }
 
-.products .cart-wrapper-overlay:before {
-  content: '';
-  width: 100%;
-  min-height: 100%;
-  background: #3A3838DB;
-  opacity: 86%;
-  position: absolute;
-  top: 0;
-}
-
-.products .cart-wrapper-overlay:before {
-  display: none;
-}
-
-.products .cart__button-overlay {
-  min-height: 43px;
-  width: 138px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 1px solid;
-  border-color: #FFFFFF;
-  color: #FFFFFF;
-  padding: 14px 15px 12px 0px;
-  background-color: transparent;
+.data .button_clear-text {
+  text-transform: uppercase;
+  color: black;
   font-family: Lato;
   font-size: 14px;
-  font-weight: 400;
-  text-align: left;
+  font-weight: 300;
+  line-height: 17px;
+  text-decoration: none;
 }
 
-.products .cart__button-overlay {
-  display: none;
-}
-
-.products .cart__button-overlay:hover, .products .cart__button-overlay:focus {
-  background-color: #F16D7F;
-}
-
-.products .cart__button-overlay:active {
-  opacity: 0.7;
-}
-
-.products .cart-stroke {
-  min-height: 24px;
-  width: 26px;
-  background-color: transparent;
-  margin: -3px 11px -4px 8px;
-}
-
-.products__card:hover .cart-wrapper-overlay:before {
-  display: block;
-}
-
-.products__card:hover .cart__button-overlay {
-  display: block;
-}
-
-.products .button-location {
-  display: flex;
-  justify-content: center;
-}
-
-.products .button {
-  min-height: 48px;
-  width: 212px;
-  border: 1px solid;
-  border-color: #F26376;
-  background-color: transparent;
-  text-align: center;
-  margin: 49px 0;
-  color: #F26376;
-}
-
-.products .button:hover {
-  background-color: #F16D7F;
-  color: #FFFFFF;
-}
-
-.products .button:active {
+.data .button_clear:active, .data .button_clear-text:active {
   opacity: 0.5;
 }
 
-.adventages {
-  background-color: #222224;
+.data .button_clear:hover, .data .button_clear-text:hover {
+  background-color: #F16D7F;
+  color: #FFFFFF;
 }
 
-.adventages__card {
-  margin: 103px 30px 104px 0;
-  width: 360px;
-  min-height: 133px;
+.data .button_continue {
+  height: 50px;
+  width: 225px;
+  background-color: #FFFFFF;
+  border: 1px solid #A4A4A4;
+  margin: 0;
 }
 
-@media (max-width: 1599px) {
-  .adventages__card {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 48px 0 0;
-    min-height: 134px;
+@media (max-width: 767px) {
+  .data .button_continue {
+    height: 32px;
+    width: 174px;
   }
 }
 
-.adventages__card-wrapper {
-  display: flex;
-  justify-content: space-between;
-  min-height: 341px;
-  text-align: center;
-}
-
-@media (max-width: 1599px) {
-  .adventages__card-wrapper {
-    display: block;
-    justify-content: center;
-    min-height: 610px;
-  }
-}
-
-.adventages__card-img-1 {
-  margin: 0 0 23px;
-}
-
-.adventages__card-img-2 {
-  margin: 0 0 19px;
-}
-
-.adventages__card-img-3 {
-  margin: 0 0 22px;
-}
-
-.adventages__card-title {
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #FBFBFB;
-  margin: 0 0 16px;
-}
-
-.adventages__card-subtitle {
+.data .button_continue-text {
+  text-transform: uppercase;
+  color: black;
+  font-family: Lato;
   font-size: 14px;
   font-weight: 300;
   line-height: 17px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #FBFBFB;
+  text-decoration: none;
+}
+
+.data .button_continue:active, .data .button_continue-text:active {
+  opacity: 0.5;
+}
+
+.data .button_continue:hover, .data .button_continue-text:hover {
+  background-color: #F16D7F;
+  color: #FFFFFF;
+}
+
+.data .data_adress {
+  margin: 113px 0px 342px;
 }
 
 @media (max-width: 1599px) {
-  .adventages__card-3 {
-    padding: 48px 0 63px;
+  .data .data_adress {
+    display: flex;
+    justify-content: space-between;
+    margin: 65px 0 0;
   }
+}
+
+@media (max-width: 767px) {
+  .data .data_adress {
+    display: block;
+    margin: 48px 0 0;
+  }
+}
+
+.data .adress-text {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  text-align: left;
+  color: #222222;
+  text-transform: uppercase;
+  margin: 0px 0px 21px;
+}
+
+.data .adress-name {
+  display: block;
+  height: 45px;
+  width: 360px;
+  border: 1px solid #A4A4A4;
+  margin: 0px 0px 21px;
+}
+
+@media (max-width: 767px) {
+  .data .adress-name {
+    width: 359px;
+    height: 44px;
+  }
+}
+
+@media (max-width: 767px) {
+  .data .adress-name {
+    width: 350px;
+  }
+}
+
+.data [type="text"]:hover, .data [type="text"]:focus {
+  background-color: #F1E4E6;
+  outline: none;
+  border: 1px solid #F16D7F;
+}
+
+.data .adress-button {
+  text-transform: uppercase;
+  height: 34px;
+  width: 100px;
+  background-color: #FFFFFF;
+  border: 1px solid #A4A4A4;
+  margin: 3px 0px 0px;
+}
+
+@media (max-width: 1599px) {
+  .data .adress-button {
+    margin: 3px 0px 129px;
+  }
+}
+
+@media (max-width: 767px) {
+  .data .adress-button {
+    margin: 3px 0px 0px;
+  }
+}
+
+.data .adress-button-text {
+  color: #4a4a4a;
+  font-family: Lato;
+  font-size: 11px;
+  font-weight: 300;
+  line-height: 13px;
+  text-decoration: none;
+}
+
+.data .adress-button:active, .data .adress-button-text:active {
+  opacity: 0.5;
+}
+
+.data .adress-button:hover, .data .adress-button-text:hover {
+  background-color: #F16D7F;
+  color: #FFFFFF;
+}
+
+.data .total {
+  height: 214px;
+  width: 360px;
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  background: #f5f3f3;
+  margin: 57px 0px 0px;
+}
+
+@media (max-width: 1599px) {
+  .data .total {
+    margin: 39px 0 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .data .total {
+    margin: 48px 0 96px;
+    width: 350px;
+  }
+}
+
+.data .total-sub {
+  text-transform: uppercase;
+  height: 13px;
+  width: 108px;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 13px;
+  text-align: right;
+  color: #4a4a4a;
+  padding: 39px 34px 12px 218px;
+}
+
+.data .total-grand {
+  text-transform: uppercase;
+  height: 19px;
+  width: 170px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  text-align: right;
+  padding: 0px 37px 21px 153px;
+}
+
+.data .total-grand-pink {
+  font-weight: 700;
+  line-height: 19px;
+  text-align: right;
+  color: #F16D7F;
+}
+
+.data .total-line {
+  padding: 0px 42px 17px;
+}
+
+.data .total-button {
+  height: 50px;
+  width: 273px;
+  background-color: #F16D7F;
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  margin: 0px 43px 42px 44px;
+}
+
+.data .total-button-text {
+  text-transform: uppercase;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.data .total-button:active, .data .total-button-text:active {
+  opacity: 0.5;
+}
+
+.data .total-button:hover, .data .total-button-text:hover, .data .total-button:focus, .data .total-button-text:focus {
+  background-color: #222222;
+  color: #FFFFFF;
 }
 
 .subscription {
@@ -1023,4 +1016,4 @@ body {
 .footer__controls-twitter:hover, .footer__controls-twitter:focus {
   opacity: 0.5;
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=stylecart.css.map */
