--- a/css/adaptregistration.css
+++ b/css/adaptregistration.css
@@ -249,457 +249,299 @@ body {
   }
 }
 
-.shopping {
+.registration {
   text-transform: uppercase;
   min-height: 148px;
   background-color: #F8F3F4;
 }
 
-.shopping__title {
+.registration__title {
   color: #F16D7F;
   font-size: 24px;
   font-weight: 400;
   line-height: 29px;
   text-align: left;
-  padding: 59px 0px 0px;
+  padding: 59px 0 0;
 }
 
 @media (max-width: 767px) {
-  .shopping__title {
+  .registration__title {
     text-align: center;
-    padding: 50px 0 0;
+    padding: 60px 0 0;
   }
 }
 
 .data {
   display: flex;
   justify-content: space-between;
+  margin: 64px 0 0;
 }
 
-@media (max-width: 1599px) {
+@media (max-width: 767px) {
   .data {
     display: block;
   }
 }
 
-@media (max-width: 767px) {
-  .data {
-    width: 343px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.data_cart {
-  margin: 96px 129px 128px 0px;
-}
-
-@media (max-width: 1599px) {
-  .data_cart {
-    margin: 59px 0 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .data_cart {
-    margin: 39px 0 0;
-  }
-}
-
-.data .cart-img {
-  width: 652px;
-}
-
-@media (max-width: 1599px) {
-  .data .cart-img {
-    width: 757px;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .cart-img {
-    width: 100%;
-  }
-}
-
-.data .cart-1 {
-  min-height: 306px;
-  width: 652px;
-  position: relative;
-}
-
-@media (max-width: 1599px) {
-  .data .cart-1 {
-    width: 734px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .cart-1 {
-    width: 343px;
-    min-height: 188px;
-  }
-}
-
-.data .cart-cross-1 {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  color: #575757;
-  background-color: transparent;
-  height: 16px;
-  width: 16px;
-  border-width: initial;
-  border-style: none;
-  border-color: initial;
-  border-image: initial;
-  margin: 28px 64px 0px 0px;
-}
-
-@media (max-width: 1599px) {
-  .data .cart-cross-1 {
-    margin: 21px 44px 0px 0px;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .cart-cross-1 {
-    margin: 21px 48px 0px 0px;
-  }
-}
-
-.data .cart-2 {
-  min-height: 306px;
-  width: 652px;
-  position: relative;
-}
-
-@media (max-width: 1599px) {
-  .data .cart-2 {
-    width: 734px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .cart-2 {
-    width: 343px;
-    min-height: 188px;
-  }
-}
-
-.data .cart-cross-2 {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  color: #575757;
-  background-color: transparent;
-  height: 18px;
-  width: 18px;
-  border-width: initial;
-  border-style: none;
-  border-color: initial;
-  border-image: initial;
-  margin: 28px 64px 0px 0px;
-}
-
-@media (max-width: 1599px) {
-  .data .cart-cross-2 {
-    margin: 21px 44px 0px 0px;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .cart-cross-2 {
-    margin: 21px 48px 0px 0px;
-  }
-}
-
-.data .button {
-  display: flex;
-  margin-top: 72px;
-}
-
-@media (max-width: 1599px) {
-  .data .button {
-    margin-top: 62px;
-    justify-content: center;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .button {
-    margin-top: 30px;
-  }
-}
-
-.data .button_clear {
-  height: 50px;
-  width: 235px;
-  background-color: #FFFFFF;
-  text-transform: uppercase;
-  color: black;
+.data__information {
   font-family: Lato;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 17px;
-  border: 1px solid #A4A4A4;
-  margin: 0 193px 0px 0px;
-}
-
-@media (max-width: 1599px) {
-  .data .button_clear {
-    height: 49px;
-    width: 234px;
-    margin: 0 48px 0 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .button_clear {
-    height: 32px;
-    width: 174px;
-    margin: 0 9px 0 0;
-  }
-}
-
-.data .button_clear-text {
-  text-transform: uppercase;
-  color: black;
-  font-family: Lato;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 17px;
-  text-decoration: none;
-}
-
-.data .button_clear:active, .data .button_clear-text:active {
-  opacity: 0.5;
-}
-
-.data .button_clear:hover, .data .button_clear-text:hover {
-  background-color: #F16D7F;
-  color: #FFFFFF;
-}
-
-.data .button_continue {
-  height: 50px;
-  width: 225px;
-  background-color: #FFFFFF;
-  border: 1px solid #A4A4A4;
-  margin: 0;
-}
-
-@media (max-width: 767px) {
-  .data .button_continue {
-    height: 32px;
-    width: 174px;
-  }
-}
-
-.data .button_continue-text {
-  text-transform: uppercase;
-  color: black;
-  font-family: Lato;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 17px;
-  text-decoration: none;
-}
-
-.data .button_continue:active, .data .button_continue-text:active {
-  opacity: 0.5;
-}
-
-.data .button_continue:hover, .data .button_continue-text:hover {
-  background-color: #F16D7F;
-  color: #FFFFFF;
-}
-
-.data .data_adress {
-  margin: 113px 0px 342px;
-}
-
-@media (max-width: 1599px) {
-  .data .data_adress {
-    display: flex;
-    justify-content: space-between;
-    margin: 65px 0 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .data_adress {
-    display: block;
-    margin: 48px 0 0;
-  }
-}
-
-.data .adress-text {
   font-size: 16px;
   font-weight: 300;
   line-height: 19px;
   text-align: left;
-  color: #222222;
-  text-transform: uppercase;
-  margin: 0px 0px 21px;
 }
 
-.data .adress-name {
-  display: block;
-  height: 45px;
+@media (max-width: 1599px) {
+  .data__information {
+    margin-left: auto;
+    margin-right: auto;
+    width: max-content;
+  }
+}
+
+@media (max-width: 767px) {
+  .data__information {
+    margin-left: auto;
+    margin-right: auto;
+    width: max-content;
+  }
+}
+
+.data__information .form__name {
   width: 360px;
-  border: 1px solid #A4A4A4;
-  margin: 0px 0px 21px;
+  min-height: 45px;
+  display: block;
+  margin: 0 0 21px;
+  border-color: #A4A4A4;
+  border-style: solid;
+  color: #B1B1B1;
 }
 
 @media (max-width: 767px) {
-  .data .adress-name {
-    width: 359px;
-    height: 44px;
+  .data__information .form__name {
+    width: 344px;
   }
 }
 
-@media (max-width: 767px) {
-  .data .adress-name {
-    width: 350px;
-  }
+.data__information .form__name::placeholder {
+  font-family: Lato;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 16px;
+  text-align: left;
+  color: #B1B1B1;
+  padding: 12px 0 16px 17px;
 }
 
-.data [type="text"]:hover, .data [type="text"]:focus {
+.data__information .form__choice {
+  display: flex;
+  justify-content: space-between;
+  min-height: 17px;
+  width: 132px;
+  font-weight: 300;
+  font-size: 11px;
+  margin: 32px 0;
+}
+
+.data__information .form__choice [type="radio"] {
+  display: none;
+}
+
+.data__information .form__choice .radio-label {
+  margin: 0 0 0 25px;
+  position: relative;
+}
+
+.data__information .form__choice .radio-label::before {
+  content: '';
+  position: absolute;
+  background-image: url(../img/registration.png);
+  width: 17px;
+  height: 17px;
+  left: -25px;
+  background-color: transparent;
+}
+
+.data__information .form__choice [type="radio"]:checked + .radio-label::before {
+  background-color: #F16D7F;
+  border-radius: 10px;
+}
+
+.data__information .form__title {
+  min-height: 19px;
+  width: 136px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  text-align: left;
+  margin: 0 0 21px;
+}
+
+.data__information .form [type="text"]:hover,
+.data__information .form [type="text"]:focus,
+.data__information .form [type="email"]:hover,
+.data__information .form [type="email"]:focus,
+.data__information .form [type="password"]:hover,
+.data__information .form [type="password"]:focus {
   background-color: #F1E4E6;
   outline: none;
   border: 1px solid #F16D7F;
 }
 
-.data .adress-button {
-  text-transform: uppercase;
-  height: 34px;
-  width: 100px;
-  background-color: #FFFFFF;
-  border: 1px solid #A4A4A4;
-  margin: 3px 0px 0px;
-}
-
-@media (max-width: 1599px) {
-  .data .adress-button {
-    margin: 3px 0px 129px;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .adress-button {
-    margin: 3px 0px 0px;
-  }
-}
-
-.data .adress-button-text {
-  color: #4a4a4a;
-  font-family: Lato;
-  font-size: 11px;
+.data__information .form__text {
+  min-height: 32px;
+  width: 359px;
+  font-size: 13px;
   font-weight: 300;
-  line-height: 13px;
-  text-decoration: none;
+  line-height: 16px;
+  text-align: left;
+  color: #B1B1B1;
+  margin: -6px 0 0;
 }
 
-.data .adress-button:active, .data .adress-button-text:active {
-  opacity: 0.5;
-}
-
-.data .adress-button:hover, .data .adress-button-text:hover {
+.data__information [type="submit"] {
+  min-height: 50px;
+  width: 167px;
   background-color: #F16D7F;
   color: #FFFFFF;
-}
-
-.data .total {
-  height: 214px;
-  width: 360px;
-  border-width: initial;
-  border-style: none;
-  border-color: initial;
-  border-image: initial;
-  background: #f5f3f3;
-  margin: 57px 0px 0px;
-}
-
-@media (max-width: 1599px) {
-  .data .total {
-    margin: 39px 0 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .data .total {
-    margin: 48px 0 96px;
-    width: 350px;
-  }
-}
-
-.data .total-sub {
-  text-transform: uppercase;
-  height: 13px;
-  width: 108px;
-  font-size: 11px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 13px;
-  text-align: right;
-  color: #4a4a4a;
-  padding: 39px 34px 12px 218px;
-}
-
-.data .total-grand {
+  text-align: left;
   text-transform: uppercase;
-  height: 19px;
-  width: 170px;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 19px;
-  text-align: right;
-  padding: 0px 37px 21px 153px;
+  border: none;
+  margin: 39px 0 96px 0;
+  padding: 16px 26px 17px 29px;
+  align-content: center;
 }
 
-.data .total-grand-pink {
-  font-weight: 700;
-  line-height: 19px;
-  text-align: right;
-  color: #F16D7F;
+@media (max-width: 767px) {
+  .data__information [type="submit"] {
+    margin: 39px 0 40px 0;
+  }
 }
 
-.data .total-line {
-  padding: 0px 42px 17px;
+.data__information .submit_join {
+  height: 10px;
+  width: 17px;
+  margin: 0 0 0 20px;
 }
 
-.data .total-button {
-  height: 50px;
-  width: 273px;
-  background-color: #F16D7F;
-  border-width: initial;
-  border-style: none;
-  border-color: initial;
-  border-image: initial;
-  margin: 0px 43px 42px 44px;
+.data__information [type="submit"]:hover,
+.data__information [type="submit"]:focus {
+  background-color: var(--dark-blue);
 }
 
-.data .total-button-text {
-  text-transform: uppercase;
-  font-family: Lato;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 19px;
-  color: #FFFFFF;
-  text-decoration: none;
-}
-
-.data .total-button:active, .data .total-button-text:active {
+.data__information [type="submit"]:active {
   opacity: 0.5;
 }
 
-.data .total-button:hover, .data .total-button-text:hover, .data .total-button:focus, .data .total-button-text:focus {
-  background-color: #222222;
-  color: #FFFFFF;
+.data__loyalty {
+  font-family: Lato;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 29px;
+  text-align: left;
+  min-height: 334px;
+  width: 652px;
+}
+
+@media (max-width: 1599px) {
+  .data__loyalty {
+    width: 354px;
+    min-height: 337px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .data__loyalty {
+    width: 358px;
+    min-height: 340px;
+    margin: 0 0 96px 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.data__loyalty-title {
+  text-transform: uppercase;
+  color: #000000;
+  width: 265px;
+  min-height: 29px;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  margin: 0 0 22px;
+}
+
+@media (max-width: 1599px) {
+  .data__loyalty-title {
+    width: 177px;
+    min-height: 19px;
+    margin: 0 0 32px;
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+
+@media (max-width: 767px) {
+  .data__loyalty-title {
+    width: 179px;
+  }
+}
+
+.data__loyalty-subtitle {
+  width: 652px;
+  min-height: 58px;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  margin: 0 0 21px;
+}
+
+@media (max-width: 1599px) {
+  .data__loyalty-subtitle {
+    width: 354px;
+    min-height: 57px;
+    font-size: 16px;
+    line-height: 19px;
+    margin: 0 0 22px;
+  }
+}
+
+.data__loyalty-mark {
+  position: relative;
+  list-style-type: none;
+  margin: 0 0 16px 42px;
+  min-height: 24px;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+@media (max-width: 1599px) {
+  .data__loyalty-mark {
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+
+.data__loyalty-mark::before {
+  position: absolute;
+  content: '';
+  height: 16px;
+  width: 20px;
+  position: absolute;
+  left: -42px;
+  top: 7px;
+  background-image: url(../img/checkmark.png);
+}
+
+@media (max-width: 1599px) {
+  .data__loyalty-mark::before {
+    top: 3px;
+  }
 }
 
 .subscription {
@@ -1016,4 +858,4 @@ body {
 .footer__controls-twitter:hover, .footer__controls-twitter:focus {
   opacity: 0.5;
 }
-/*# sourceMappingURL=stylecart.css.map */
+/*# sourceMappingURL=adaptregistration.css.map */
